# SolutionExplorer

./: .gitignore  CMakeLists.txt  Problem.cpp  README.md
docs/: CMakeLists.txt
include/: BacktrackSearch.h  BacktrackingSolver.h  BreadthFirsRecursiveEnum.h  BreadthFirstEnum.h  BreadthFirstLinSearch.h  BreadthFirstRecursiveLinSearch.h  DFS_RecursiveLinSearch.h  DepthFirstEnum.h  DepthFirstLinSearch.h  DepthFirstRecursiveEnum.h  DepthFirstRecursiveLinSearch.h  EnumDepthFirstRecursive.h  Enumerator.h  IncreasingEnum.h  IncreasingLinSearch.h  LinearSearch.h  Queens.h  SolutionExplorer.h  Solver.h  Task.h
src/: BacktrackSearch.cpp  BacktrackingSolver.cpp  BreadthFirsRecursiveEnum.cpp  BreadthFirstEnum.cpp  BreadthFirstLinSearch.cpp  BreadthFirstRecursiveLinSearch.cpp  CMakeLists.txt  DFS_RecursiveLinSearch.cpp  DepthFirstEnum.cpp  DepthFirstLinSearch.cpp  DepthFirstRecursiveEnum.cpp  DepthFirstRecursiveLinSearch.cpp  EnumDepthFirstRecursive.cpp  Enumerator.cpp  GraphColoring.cpp  IncreasingEnum.cpp  IncreasingLinSearch.cpp  LinearSearch.cpp  Queens.cpp  SolutionExplorer.cpp  Solver.cpp  SumOfSubsets.cpp  Task.cpp  main.cpp
templates/: CMakeLists.txt
templates/include/: GraphColoring.h  Queens.h  SumOfSubsets.h  Task.h
templates/src/: CMakeLists.txt  Queens.cpp  main.cpp
tests/: CMakeLists.txt  Queens_test.cpp  main_test.cpp
